benchmark/logs/benchmark.log
untrusted/app.c: In function ‘SGX_cls_rules_format’:
untrusted/app.c:30:24: error: ‘hotcall_ecall_cls_rules_format’ undeclared (first use in this function)
     make_hotcall(&ctx, hotcall_ ## f, &arg_list, return_val)
                        ^
untrusted/app.c:814:5: note: in expansion of macro ‘ECALL’
     ECALL(ecall_cls_rules_format, false, 3, CAST(bridge_id), cls_rules, megamatches, CAST(n));
     ^
untrusted/app.c:30:24: note: each undeclared identifier is reported only once for each function it appears in
     make_hotcall(&ctx, hotcall_ ## f, &arg_list, return_val)
                        ^
untrusted/app.c:814:5: note: in expansion of macro ‘ECALL’
     ECALL(ecall_cls_rules_format, false, 3, CAST(bridge_id), cls_rules, megamatches, CAST(n));
     ^
make[1]: *** [untrusted/app.o] Error 1
make: *** [all] Error 2
cp: cannot stat 'enclave.signed.so': No such file or directory
untrusted/mbedtls_client.cpp: In function ‘int main(int, char**)’:
untrusted/mbedtls_client.cpp:179:22: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
         char * msg = "GET / HTTP/1.1\r\nHost: www.google.com\r\n\r\n";
                      ^
In file included from trusted/enclave.c:10:0:
/home/jakob/ovs-sgx/TLSonSGX/mbedtls-SGX/src/mbedtls-2.2.1/include/mbedtls/compat-1.3.h:2456:0: warning: "ssl_set_bio" redefined
 #define ssl_set_bio mbedtls_ssl_set_bio_timeout
 ^
/home/jakob/ovs-sgx/TLSonSGX/mbedtls-SGX/src/mbedtls-2.2.1/include/mbedtls/compat-1.3.h:2455:0: note: this is the location of the previous definition
 #define ssl_set_bio mbedtls_ssl_set_bio
 ^
trusted/enclave.c:47:6: warning: conflicting types for built-in function ‘printf’
 void printf(const char *fmt, ...)
      ^
trusted/enclave.c: In function ‘send_recv’:
trusted/enclave.c:93:44: warning: ‘sizeof’ on array function parameter ‘recv_buf1’ will return size of ‘char *’ [-Wsizeof-array-argument]
                 memset(recv_buf1, 0, sizeof(recv_buf1));
                                            ^
trusted/enclave.c:79:57: note: declared here
 send_recv(mbedtls_ssl_context ssl, char* send_buf, char recv_buf1[6000]) {
                                                         ^
trusted/enclave.c: In function ‘ecall_ssl_library_init’:
trusted/enclave.c:302:31: warning: passing argument 1 of ‘generate_keys’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
                 generate_keys(buf);
                               ^
trusted/enclave.c:114:1: note: expected ‘char *’ but argument is of type ‘const char *’
 generate_keys(char *currMeasure) {
 ^
trusted/enclave.c: In function ‘ecall_ssl_new’:
trusted/enclave.c:335:37: warning: passing argument 1 of ‘mbedtls_ssl_setup’ from incompatible pointer type [-Wincompatible-pointer-types]
         if((res = mbedtls_ssl_setup(ssl, ssl->cntx.conf)) != 0) {
                                     ^
In file included from /home/jakob/ovs-sgx/TLSonSGX/mbedtls-SGX/src/mbedtls-2.2.1/include/mbedtls/net_v.h:32:0,
                 from trusted/enclave_t.h:10,
                 from trusted/enclave.c:1:
/home/jakob/ovs-sgx/TLSonSGX/mbedtls-SGX/src/mbedtls-2.2.1/include/mbedtls/ssl.h:860:5: note: expected ‘mbedtls_ssl_context * {aka struct mbedtls_ssl_context *}’ but argument is of type ‘SSL * {aka struct ps_ssl *}’
 int mbedtls_ssl_setup( mbedtls_ssl_context *ssl,
     ^
tcs_num 1, tcs_max_num 1, tcs_min_pool 1
The required memory is 1916928B.
Succeed.
configure: error: in `/home/jakob/ovs-sgx/ovs':
configure: error: C compiler cannot create executables
See `config.log' for more details
configure: error: in `/home/jakob/ovs-sgx/ovs':
configure: error: C compiler cannot create executables
See `config.log' for more details
make: *** [config.status] Error 77
configure: error: in `/home/jakob/ovs-sgx/ovs':
configure: error: C compiler cannot create executables
See `config.log' for more details
make: *** [config.status] Error 77
configure: error: in `/home/jakob/ovs-sgx/ovs':
configure: error: C compiler cannot create executables
See `config.log' for more details
make: *** [config.status] Error 77
configure: error: in `/home/jakob/ovs-sgx/ovs':
configure: error: C compiler cannot create executables
See `config.log' for more details
make: *** [config.status] Error 77
ovsdb-tool: I/O error: create: /usr/local/etc/openvswitch/conf.db failed (File exists)
